fix: reduce type size on mobile

--- a/src/styles/content.css
+++ b/src/styles/content.css
@@ -65,7 +65,7 @@
   }
 
   .content-block {
-    font-size: 25px;
+    font-size: 24px;
     color: black;
   }
 
@@ -77,7 +77,7 @@
     width: 100%;
     display: flex;
     justify-content: center;
-    font-size: 25px;
+    font-size: 24px;
     margin: 0;
     padding: 0;
     text-transform: uppercase;
