--- a/src/styles/ui.css
+++ b/src/styles/ui.css
@@ -94,7 +94,7 @@
 
   .worker-stats {
     width: 280px;
-    font-size: 25px;
+    font-size: 24px;
     padding: 18px 40px;
   }
 }
